[package]
name = "reddit_sudoku_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
warp = "0.3.1"
roux = "2.2.5"
opencv = "0.77.0"
reqwest = "0.11.14"
lisudoku-solver = "0.1.17"
# lisudoku-solver = { path = "../lisudoku_solver" }
medians = "2.1.7"
tesseract-sys = "0.5.15"
tesseract-plumbing = "0.9.0"
