[package]
name = "sudoku_vision"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
warp = "0.3.1"
roux = "2.2.13"
reqwest = "0.11.14"
byte-unit = "4.0.18"
discord = { git = "https://github.com/SpaceManiac/discord-rs", rev = "500c344c2d5679a3c08514f01b96fac59eb276df" }
chrono = "0.4.24"
lisudoku-ocr = "=0.1.6"
# lisudoku-ocr = { path = "../lisudoku_ocr" }
lisudoku-solver = "=0.1.19"
# lisudoku-solver = { path = "../lisudoku_solver" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
bytes = "1"
itertools = "0.13.0"
